# data-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scratch.py  test_model.py
app/: main.py
app/api/: chat_router.py
app/core/: config.py  lifespan.py
app/ml/: base.py  emotion_bilstm.py  new_model.py
app/schemas/: chat_schema.py
app/services/: emotion_service.py  gemini_service.py  groq_service.py  memory_service.py  orchestrator.py  response_templates.py  speech_service.py  translator_service.py
app/utils/: heuristics.py  text_cleaner.py
